export working vanillajs done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "declaration": true,
     "target": "es2015",
     "lib": ["es2017", "dom"],
-    "outDir": "dist",
-    "rootDir": "./",
+    "outDir": "build",
+    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
       "*": ["types/*"]
