--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix",
     "doc": "typedoc --out docs/ src/"
   },
