--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "save-image-as",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Convert any image to png in browser",
+  "main": "build/save-image-as.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve",
