--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "save-image-as",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Convert any image to png in browser",
   "main": "build/saveImageAs.js",
   "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve",
-    "build": "webpack --mode production",
+    "build": "rm -rf build/ && webpack --mode production",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix",
     "doc": "typedoc --out docs/ src/"
   },
