--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-image-as",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Convert any image to png in browser",
   "main": "build/save-image-as.module.js",
   "types": "build/index.d.ts",
@@ -25,15 +25,15 @@
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^7.15.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-beta.1",
     "husky": "^4.3.6",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.11",
     "typedoc": "^0.19.2",
     "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "husky": {
     "hooks": {
