--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack serve",
-    "build": "rm -rf build/ && webpack --mode production",
+    "serve": "webpack serve -c webpack.config.dev.js",
+    "build": "rm -rf build/ && webpack -c webpack.config.prod.js",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix",
     "doc": "typedoc --out docs/ src/"
   },
