--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "husky": "^4.3.6",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.11",
-    "typedoc": "^0.19.2",
+    "typedoc": "^0.20.0-beta.27",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
