--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "AMD",
+    "module": "ES6",
     "strict": true,
     "noImplicitReturns": true,
     "removeComments": true,
