--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "save-image-as",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "Convert any image to png in browser",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve -c webpack.config.dev.js",
-    "build": "rm -rf build/ && webpack -c webpack.config.prod.js",
+    "build": "rm -rf build/ && npx tsc",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix",
     "doc": "typedoc --out docs/ src/"
   },
