--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.15.0",
     "html-webpack-plugin": "^5.0.0-beta.1",
     "husky": "^4.3.6",
