--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^5.0.0-beta.1",
     "husky": "^4.3.6",
     "prettier": "^2.2.1",
+    "selenium-webdriver": "^4.0.0-alpha.8",
     "ts-loader": "^8.0.11",
     "typedoc": "^0.20.0-beta.27",
     "typescript": "^4.1.3",
