--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "browserstack-local": "^1.4.8",
     "copy-webpack-plugin": "^7.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.15.0",
