--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "serve": "webpack serve -c webpack.config.dev.js",
     "build": "rm -rf dist/ && npx tsc && webpack -c webpack.config.prod.js",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix"
@@ -18,6 +18,9 @@
   "author": "Emre Sakarya https://github.com/softberry",
   "license": "MIT",
   "devDependencies": {
+    "@babel/parser": "^7.12.11",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/types": "^7.12.12",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "babel-core": "^6.26.3",
@@ -29,14 +32,17 @@
     "eslint": "^7.15.0",
     "html-webpack-plugin": "^5.0.0-beta.1",
     "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
     "ts-loader": "^8.0.11",
-    "typedoc": "^0.20.0-beta.27",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^4.0.0-beta.0"
+  },
+  "jest": {
+    "testTimeout": 30000
   },
   "husky": {
     "hooks": {
