--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
   - yarn
 script:
   - yarn build
-  - yarn yarn win10-firefox-2
-  - yarn yarn osCatalinaSafari-13
+  - yarn win10-firefox-2
+  - yarn osCatalinaSafari-13
