--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "win10-firefox-2": "jest win10-firefox-2.js",
     "osCatalinaSafari-13": "jest osCatalinaSafari-13.js",
+    "win8-chrome-2": "jest win8-chrome-2.js",
     "serve": "webpack serve -c webpack.config.dev.js",
     "build": "rm -rf dist/ && npx tsc && webpack -c webpack.config.prod.js",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix"
