--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "osCatalinaSafari-13": "jest osCatalinaSafari-13.js",
     "win8-chrome-2": "jest win8-chrome-2.js",
     "win8.1-edge-2": "jest win8.1-edge-2.js",
-    "win7-IE11": "jest win7-IE11.js",
     "serve": "webpack serve -c webpack.config.dev.js",
     "build": "rm -rf dist/ && npx tsc && webpack -c webpack.config.prod.js",
     "linter": "eslint \"**/*{.tsx,.ts}\" --fix"
@@ -24,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/parser": "^7.12.11",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/types": "^7.12.12",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
